
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int free (void*) ;

void
xfree(void * in)
{
  if (in != 0)
  {
    free(in);
  }
}
